# snakevir

./: .gitattributes  .gitignore  .readthedocs.yml  README.md  README.rst  cluster.json  config.yaml  pyproject.toml  snakefile
SnakeWrapper/: edit_cluster.py  install.py  main.py  make_config.py  run.py
docs/: requirements.txt
docs/source/: ABOUT.rst  INSTALL.rst  PROJECT.rst  WORKFLOWS.rst  click.rst  conf.py  index.rst
install_files/: config.yaml  snakevir_environment.yml
snakefiles/: assembly.snake  blast_taxid.snake  depth.snake  map_on_assembly.snake
snakevir/: __init__.py  __main__.py  main.py  snakefile
snakevir/function/: edit_cluster.py  install.py  make_config.py  run.py
snakevir/install_files/: cluster.yaml  config.yaml  snakevir_environment.yml
snakevir/script/: clustering_Report.Rmd  create_results_doc_new.py
snakevir/snakefiles/: assembly.snake  blast_taxid.snake  depth.snake  map_on_assembly.snake  read_processing.snake
