[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snakevir"
version = "1.0.0"
description = "This is a worflow that analyses some metagenomics data"
authors = [
    { name = "Florian CHARRIAT (CIRAD)", email = "florian.charriat@cirad.fr" },
    { name = "Antoni Exbrayat (CIRAD)"}]
dependencies = [
    "click",
    "rich_click",
    "cookiecutter",
    "snakemake",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "sphinx_click"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
snakevir = "snakevir.main:main"

[project.urls]
Homepage = "https://github.com/FlorianCHA/snakevir"